--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
           </form>
         </div>
       </nav>
-
-     
-      
-      </div>
-
+      <div class="container">
+        <div class="row">
+        <div class="col-md-4">
         <head>
         <title>Titel der HTML-Datei</title>
         </head>
